k8s/apps/bases/uptime/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: uptime
  labels:
    istio-injection: enabled
spec: {}
status: {}
