k8s/apps/bases/uptime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-uptime
  namespace: uptime
spec:
  ports:
    - name: http-uptime
      port: 8080
      targetPort: 8080
  selector:
    app: tracker-uptime
  type: ClusterIP
status:
  loadBalancer: {}
