k8s/apps/bases/uptime/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracker-uptime-virtual-service
  namespace: uptime
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/publicgateway
  http:
    - name: gateway-to-uptime
      match:
        - uri:
            prefix: /uptime
      rewrite:
        uri: /
      route:
        - destination:
            host: tracker-uptime.uptime.svc.cluster.local
            port:
              number: 8080
