k8s/apps/bases/uptime/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uptime-netpol
  namespace: uptime
spec:
  podSelector:
    matchLabels:
      app: tracker-uptime
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: istio-ingressgateway
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
